--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,3 @@
-.heading1 {
-    margin-top: 5px; 
-    margin-bottom: 5px;
-}
-
-.heading2 {
-    margin-top: 5px; 
-    margin-bottom: 5px;
-}
-
-.container2 {
-    width: 80%;
-}
-
 .top {
     height: 100px;
     display: flex;
@@ -20,10 +6,40 @@
     border-bottom: 2px solid black;
 }
 
-.container1 {
+.heading1 {
+    margin-top: 2px; 
+    margin-bottom: 2px;
+}
+
+.heading2 {
+    margin-top: 2px; 
+    margin-bottom: 2px;
+}
+
+.middle {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+}
+
+.content {
+    width: 90%;
+
+}
+
+.content-slice {
+    background-color: aquamarine;
+    height: 200px;
+    margin: 5px auto;
+}
+
+.content-slice-top {
+    display: flex;
+    height: 20px;
+}
+
+.content-slice-middle {
+
 }
 
 /*
