--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,14 @@
 .heading1 {
     margin-top: 2px; 
     margin-bottom: 2px;
+    font-family: 'Mulish', sans-serif;
 }
 
 .heading2 {
     margin-top: 2px; 
     margin-bottom: 2px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: bolder;
 }
 
 .middle {
